--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ a {
   padding: 48px 16px;
 }
 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+}
+
+
 .card {
   max-width: 680px;
   margin: 40px auto;
