--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
 * {
   box-sizing: border-box;
 }
+header img {
+  height: 48px;
+  margin-bottom: 16px;
+}
+header img {
+  height: 48px;
+  margin-bottom: 16px;
+}
+
 
 body {
   margin: 0;
